<?xml version="1.0"?>
<package format="2">
  <name>pathfinder</name>
  <version>0.0.0</version>
  <description>Code to find path from a frontier point to all target points</description>

  <maintainer email="utku@nyu.edu">Utku Unlu</maintainer>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>octomap_server</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>aerosim_comm</depend>

</package>
